--- a/Week-1/Week1_Garbage_Classification.ipynb
+++ b/Week-1/Week1_Garbage_Classification.ipynb
@@ -13,7 +13,7 @@
         "- Image resized to 260x260 (EfficientNetV2B2 input size)\n",
         "- Normalization and data augmentation\n",
         "- Class weight handling for imbalanced dataset\n",
-        "- Model callbacks (EarlyStopping, ReduceLROnPlateau)"
+        "- Model callbacks (EarlyStopping, ReduceLROnPlateau, ModelCheckpoint)"
       ]
     },
     {
